# trading-project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_TASK_TEMPLATE.md  DOCUMENTATION.md  IMPLEMENT.md  MILESTONES.md  MULTI_AGENT_SPEC.md  Makefile  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  artifactspaperrun_live_validationdaily_system_report.json  artifactspaperrun_live_validationdaily_system_report.md  debug_orch_test.py  pyproject.toml  pytest.ini
.codex/: config.toml
.kalshi/: private_key.pem
configs/: adaptive_allocation.yaml  adaptive_allocation_experiment.yaml  alerts.yaml  alpha_cycle.yaml  alpha_research.yaml  autonomous_loop.yaml  backtester_validation.yaml  binance.yaml  broker.yaml  canonical_bundle_experiment.yaml  canonical_bundle_experiment_matrix.yaml  classification_build.yaml  dashboard.yaml  execution.yaml  experiment_campaign_adaptive.yaml  experiment_campaign_adaptive_fast.yaml  experiment_campaign_adaptive_medium.yaml  experiment_campaign_governance.yaml  experiment_campaign_governance_fast.yaml  experiment_campaign_governance_medium.yaml  experiment_campaign_regime.yaml  experiment_campaign_regime_fast.yaml  experiment_campaign_regime_medium.yaml  experiments.yaml  fundamentals_snapshot.yaml  kalshi.yaml  kalshi_research.yaml  market_regime.yaml  minimal_local_demo.yaml  monitoring.yaml  notifications.yaml  orchestration.yaml  orchestration_experiment_base.yaml  orchestration_experiment_fast.yaml  orchestration_experiment_medium.yaml  orchestration_operating_baseline.yaml  orchestration_recommended_defaults_medium.yaml  orchestration_signal_promotion_test.yaml  pipeline_daily.yaml  polymarket.yaml  (+14 more)
docs/: architecture_layers.md  multi_frequency_alignment.md  performance_profiling_and_caching_plan.md  test_strategy_by_layer.md
migrations/: env.py
scripts/: daily_system_report.py  download_polymarket_blockchain.sh  generate_kalshi_synthetic_data.py  review_validation_window.py  run_daily_validation.py  run_ev_mode_grid.ps1  run_operating_baseline_daily.ps1  run_operating_baseline_daily.sh  run_reliability_warmup_grid.py  send_validation_alert.py  summarize_ev_grid.py
tests/: test_adaptive_allocation.py  test_alerts_config.py  test_alpaca_broker.py  test_alpha_cycle.py  test_alpha_lab.py  test_alpha_lab_folds.py  test_alpha_lab_promotion.py  test_alpha_research_loop.py  test_approved_model_state.py  test_automated_orchestration.py  test_backtest_engine.py  test_backtest_service.py  test_breakout_hold_signal.py  test_calibration_pipeline.py  test_canonical_loader.py  test_canonical_workflow_smoke.py  test_cli_grouping.py  test_cli_presets.py  test_compare_xsec_construction_command.py  test_conditional_activation.py  test_conditional_research.py  test_config_loader.py  test_db_layer.py  (+132 more)
(+738 files in other folders)
