[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform"
version = "0.1.0"
description = "Research platform for trading strategies, feature engineering, and backtesting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["trading", "research", "backtesting", "portfolio", "monitoring"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

authors = [
  { name = "Brad Assaly" }
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "polars>=0.20",
  "yfinance>=0.2",
  "backtesting>=0.3",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
  "alpaca-py",
  "scipy",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  # Kalshi prediction markets
  "requests>=2.31",
  "websockets>=10.0",
  "cryptography>=41.0"
]

[project.urls]
Repository = "https://github.com/bradleyassaly/trading-project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
classification = [
  "FinanceDatabase>=2.1,<2.2",
  "pandas<3"
]
research_diagnostics = [
  "alphalens-reloaded>=0.4",
  "quantstats>=0.0.62"
]
portfolio_optimizers = [
  "PyPortfolioOpt>=1.5"
]
validation = [
  "vectorbt>=0.26"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.0"
]

[project.scripts]
trading-cli = "trading_platform.cli.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.black]
line-length = 120
